--- a/app/src/main/res/layout/book_detail.xml
+++ b/app/src/main/res/layout/book_detail.xml
@@ -1,64 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:layout_margin="2dp"
-    android:gravity="center"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/tvName_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/tvAuthor_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="TextView"
-        android:textStyle="bold" />
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="2dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <CheckBox
-            android:id="@+id/checkBoxIsReaded_detail"
+        <TextView
+            android:id="@+id/tvName_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="50dp"
-            android:text="lu" />
+            android:layout_gravity="center_horizontal"
+            android:text="TextView" />
 
-        <ImageButton
-            android:id="@+id/btnEdit_detail"
+        <TextView
+            android:id="@+id/tvAuthor_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="50dp"
-            android:background="#0000"
-            app:srcCompat="@drawable/ic_baseline_edit_24" />
+            android:layout_gravity="center_horizontal"
+            android:text="TextView"
+            android:textStyle="bold" />
 
-        <ImageButton
-            android:id="@+id/btnDelete_detail"
+        <ImageView
+            android:id="@+id/bookImage_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#0000"
-            app:srcCompat="@drawable/ic_baseline_delete_24" />
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/books" />
+
+        <TextView
+            android:id="@+id/textViewResume_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pas de resume" />
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/bookImage_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/books" />
-
-</LinearLayout>
+</ScrollView>
