--- a/app/src/main/res/layout/book_list.xml
+++ b/app/src/main/res/layout/book_list.xml
@@ -11,16 +11,30 @@
         android:layout_height="wrap_content" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnLogOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="8dp"
+        android:contentDescription="Se deconnecter"
+        android:cropToPadding="false"
+        android:src="@drawable/ic_baseline_exit_to_app_24"
+        app:backgroundTint="#00AAFF"
+        app:tint="@color/black"
+        app:useCompatPadding="true" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAddBook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:background="#0000"
+        android:layout_margin="8dp"
         android:contentDescription="Ajouter un livre"
         android:cropToPadding="false"
         android:src="@drawable/ic_baseline_add_24"
+        app:backgroundTint="#00AAFF"
+        app:tint="@color/black"
         app:useCompatPadding="true" />
 
 </RelativeLayout>
